# MCU_Templates

stm32h5xx_template/: CMakeLists.txt  CMakePresets.json
stm32h5xx_template/Core/: CMakeLists.txt
stm32h5xx_template/Core/Inc/: main.h
stm32h5xx_template/Core/Src/: main.c  syscalls.c  sysmem.c  system_stm32h5xx.c
stm32h5xx_template/Drivers/STM32H5xx_LL_Driver/: CMakeLists.txt
stm32h5xx_template/Scripts/Compiler/: gcc-arm-none-eabi.cmake
stm32h5xx_template/Test/: CMakeLists.txt
stm32h5xx_template/User/: CMakeLists.txt
